--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,10 +10,13 @@
         <error-code>404</error-code>
         <location>/404.html</location>
     </error-page>
+    
     <servlet>
         <servlet-name>MainServlet</servlet-name>
-        <servlet-class>
-            com.fatec.medicine.servlet.MainServlet
-        </servlet-class>
+        <servlet-class>com.fatec.medicine.servlet.logic.MainServlet</servlet-class>
     </servlet>
+    <servlet-mapping>
+        <servlet-name>MainServlet</servlet-name>
+        <url-pattern>/main</url-pattern>
+    </servlet-mapping>
 </web-app>
